WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30633
[GTK] EventSender, events synthetization is not correctly initialized
https://bugs.webkit.org/show_bug.cgi?id=30633
Summary
[GTK] EventSender, events synthetization is not correctly initialized
Alejandro G. Castro
Reported
2009-10-21 10:36:50 PDT
In the motion event there is no menset for initializing the memory, we are sending trash inside. And other events do not have some values initialized.
Attachments
First proposal
(3.74 KB, patch)
2009-10-21 10:53 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Fixed changelog style
(3.75 KB, patch)
2009-10-21 11:02 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Change button variable name to currentEventButton
(3.82 KB, patch)
2009-10-21 11:13 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Avoid gdk_window_get_root_coords if the gtk+ release is older than 2.17.3
(2.99 KB, patch)
2009-10-21 13:20 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Avoid tmp variables initialization in the gdk_window_get_coords patch
(2.98 KB, patch)
2009-10-21 13:36 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2009-10-21 10:53:58 PDT
Created
attachment 41575
[details]
First proposal
Alejandro G. Castro
Comment 2
2009-10-21 11:02:29 PDT
Created
attachment 41576
[details]
Fixed changelog style
Alejandro G. Castro
Comment 3
2009-10-21 11:13:33 PDT
Created
attachment 41582
[details]
Change button variable name to currentEventButton
Xan Lopez
Comment 4
2009-10-21 11:16:49 PDT
Comment on
attachment 41582
[details]
Change button variable name to currentEventButton Looks good to me.
WebKit Commit Bot
Comment 5
2009-10-21 11:55:57 PDT
Comment on
attachment 41582
[details]
Change button variable name to currentEventButton Clearing flags on attachment: 41582 Committed
r49912
: <
http://trac.webkit.org/changeset/49912
>
WebKit Commit Bot
Comment 6
2009-10-21 11:56:01 PDT
All reviewed patches have been landed. Closing bug.
Alejandro G. Castro
Comment 7
2009-10-21 13:20:46 PDT
Created
attachment 41604
[details]
Avoid gdk_window_get_root_coords if the gtk+ release is older than 2.17.3 The patch applied requires a new version of gtk+ (2.17.3), in this patch we add a work-around to avoid using the function gdk_window_get_root_coords.
Alejandro G. Castro
Comment 8
2009-10-21 13:36:08 PDT
Created
attachment 41606
[details]
Avoid tmp variables initialization in the gdk_window_get_coords patch
Gustavo Noronha (kov)
Comment 9
2009-10-21 13:38:54 PDT
Reopening the bug so that the patch gets landed.
WebKit Commit Bot
Comment 10
2009-10-21 13:47:27 PDT
Comment on
attachment 41606
[details]
Avoid tmp variables initialization in the gdk_window_get_coords patch Clearing flags on attachment: 41606 Committed
r49921
: <
http://trac.webkit.org/changeset/49921
>
WebKit Commit Bot
Comment 11
2009-10-21 13:47:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug