2009-10-21  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Initialize the events completly before emitting them.
        https://bugs.webkit.org/show_bug.cgi?id=30633

        * WebKitTools/DumpRenderTree/gtk/EventSender.cpp:

Canonical link: https://commits.webkit.org/41366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49912 268f45cc-cd09-0410-ab3c-d52691b4dbfc